--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/z2oh/pages-build-bot#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "commander": "^2.10.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.3"
   }
